# cppaper

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  LICENSE  README.md  dev.sh  dev_docs.sh  generate_docs.sh  meson.build  test_expected.sh
docs/: index.html  sitemap.xml
docs_src/: config
docs_src/pages/: changelog.md  index.md
docs_src/templates/: index.html
example/: config
example/expected/: escape&test.html  index.html  md_script.html  sitemap.xml  test.html  test_lua.html
example/expected/json-test/: index.html  json_test.html
example/expected/portfolio/: welcome.html
example/pages/: config  escape&test.md  index.html  index.html.config  md_script.md  nooutput.md  nooutput.md.config  test.md  test.md.config  test_lua.html
example/pages/json-test/: config  json_test.json  json_test.json.config
example/pages/portfolio/: config  welcome.md
example/public/: test.html
example/scripts/: 01-first-script.lua  20-last-script.lua  99-last-script.lua  hello_world.lua
example/templates/: default.html
example/templates/cppaper-default/: default.html  list.html
example/templates/json-default/: default.html  index.html
public/: CNAME  changelog.html  index.html  sitemap.xml
src/: ConfigMap.hpp  Directory.hpp  PARSE_ERROR.hpp  Page.hpp  Site.hpp  config.cpp  config.hpp  cppaper.cpp  main.cpp  string_utils.cpp  string_utils.hpp  template.cpp  template.hpp
src/components/: ChildFileComponent.hpp  Config.hpp  DirectoryComponent.hpp  FileComponent.hpp  FileContentComponent.hpp  GeneratedContentComponent.hpp  HtmlComponent.hpp  IndexFileComponent.hpp  JSONComponent.hpp  MarkdownComponent.hpp  NoOutput.hpp  PageContent.hpp  ParentDirectory.hpp  ParentSite.hpp  PathComponent.hpp  RawFileComponent.hpp  RelativePath.hpp  Script.hpp  Site.hpp  SitemapComponent.hpp  SystemConfigComponent.hpp  TemplateComponent.hpp  TemplateDataComponent.hpp  TitleComponent.hpp  shortcode.hpp
src/script/functions/: getConfigFromPage.cpp  getConfigFromPage.hpp  getPagesWithConfig.cpp  getPagesWithConfig.hpp
src/systems/: config.cpp  config.hpp  directoriesMap.cpp  directoriesMap.hpp  extension.cpp  extension.hpp  fileContent.cpp  fileContent.hpp  index.cpp  index.hpp  json.cpp  json.hpp  lua.cpp  lua.hpp  markdown.cpp  markdown.hpp  output.cpp  output.hpp  relativePath.cpp  relativePath.hpp  shortcodes.cpp  shortcodes.hpp  sitemap.cpp  sitemap.hpp  tag.cpp  tag.hpp  template.cpp  template.hpp  title.cpp  title.hpp
src/template/functions/: getConfigFrom.cpp  getConfigFrom.hpp  getJsonFrom.cpp  getJsonFrom.hpp  getPagesByTag.cpp  getPagesByTag.hpp  getPagesFrom.cpp  getPagesFrom.hpp  getPagesWithConfig.cpp  getPagesWithConfig.hpp  getPathFrom.cpp  getPathFrom.hpp  lua.cpp  lua.hpp
subprojects/: cppmark.wrap  inja.wrap  sol2.wrap  tfstring.wrap
test_project/pages/: test.md
